--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/style.css">
   <title>Chat app CSS illustration</title>
 </head>
 
 <body>
+  <div class="background-gradient">
+  </div>
 
-  Samuel Green
+</body>
+
+</html>
+
+<!-- <div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Your Name Here</a>.
+</div> -->
+
+<!-- Samuel Green
   Available to Walk
 
   That sounds great. I’d be happy with that.
@@ -35,12 +47,4 @@
 
   Stay in touch with our dog walkers through the chat interface. This makes it easy to
   discuss arrangements and make bookings. Once the walk has been completed you can rate
-  your walker and book again all through the chat.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
-
-</html>
+  your walker and book again all through the chat. -->
