style:add mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
   <div class="background-gradient">
   </div>
-
+  <div class="mobile">
+    <div class="mobile-content">
+      <div class="topscreen-gradient">
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
