style:add topscreen content

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <div class="mobile">
     <div class="mobile-content">
       <div class="topscreen-gradient">
+        <div class="user-profile">
+          <img class="user-photo" src="images/avatar.jpg" alt="">
+          <div class="user-name">Samuel Green</div>
+          <div class="about">Available to Walk</div>
+        </div>
       </div>
     </div>
   </div>
