--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
       </div>
     </div>
   </div>
+  <div class="content">
+    <div class="content-title">
+      Simple booking
+    </div>
+    <div class="content-text">
+      Stay in touch with our dog walkers through the chat interface. This makes it easy to
+      discuss arrangements and make bookings. Once the walk has been completed you can rate
+      your walker and book again all through the chat.
+    </div>
+  </div>
 </body>
 
 </html>
