style:add page content

--- a/index.html
+++ b/index.html
@@ -2,69 +2,71 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Chat app CSS illustration</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="stylesheet" href="css/style.css">
+	<title>Chat app CSS illustration</title>
 </head>
 
 <body>
-  <div class="background-gradient">
-  </div>
-  <div class="mobile">
-    <div class="mobile-content">
-      <div class="topscreen-gradient">
-        <div class="user-profile">
-          <img class="user-photo" src="images/avatar.jpg" alt="">
-          <div class="user-name">Samuel Green</div>
-          <div class="about">Available to Walk</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="content">
-    <div class="content-title">
-      Simple booking
-    </div>
-    <div class="content-text">
-      Stay in touch with our dog walkers through the chat interface. This makes it easy to
-      discuss arrangements and make bookings. Once the walk has been completed you can rate
-      your walker and book again all through the chat.
-    </div>
-  </div>
+	<div class="background-gradient">
+	</div>
+	<div class="mobile">
+		<div class="mobile-content">
+			<div class="topscreen-gradient">
+				<div class="user-profile">
+					<img class="user-photo" src="images/avatar.jpg" alt="">
+					<div class="user-name">Samuel Green</div>
+					<div class="about">Available to Walk</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="grid-area">
+		<div class="content">
+			<div class="content-title">
+				Simple booking
+			</div>
+			<div class="content-text">
+				Stay in touch with our dog walkers through the chat interface. This makes it easy to
+				discuss arrangements and make bookings. Once the walk has been completed you can rate
+				your walker and book again all through the chat.
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
 
 <!-- <div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Your Name Here</a>.
-</div> -->
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Your Name Here</a>.
+  </div> -->
 
 <!-- Samuel Green
-  Available to Walk
+    Available to Walk
 
-  That sounds great. I’d be happy with that.
+    That sounds great. I’d be happy with that.
 
-  Could you send over some pictures of your dog, please?
+    Could you send over some pictures of your dog, please?
 
-  Here are a few pictures. She’s a happy girl!
+    Here are a few pictures. She’s a happy girl!
 
-  Can you make it?
+    Can you make it?
 
-  She looks so happy! The time we discussed works. How long shall I take her out for?
+    She looks so happy! The time we discussed works. How long shall I take her out for?
 
-  30 minute walk
-  $29
+    30 minute walk
+    $29
 
-  1 hour walk
-  $49
+    1 hour walk
+    $49
 
-  Type a message…
+    Type a message…
 
-  Simple booking
+    Simple booking
 
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to
-  discuss arrangements and make bookings. Once the walk has been completed you can rate
-  your walker and book again all through the chat. -->
+    Stay in touch with our dog walkers through the chat interface. This makes it easy to
+    discuss arrangements and make bookings. Once the walk has been completed you can rate
+    your walker and book again all through the chat. -->
