style:adjust content

--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
 </head>
 
 <body>
-	<div class="background-gradient">
-	</div>
-	<div class="mobile">
-		<div class="mobile-content">
-			<div class="topscreen-gradient">
-				<div class="user-profile">
-					<img class="user-photo" src="images/avatar.jpg" alt="">
-					<div class="user-name">Samuel Green</div>
-					<div class="about">Available to Walk</div>
+	<main>
+		<div class="background-gradient">
+		</div>
+		<div class="mobile">
+			<div class="mobile-content">
+				<div class="topscreen-gradient">
+					<div class="user-profile">
+						<img class="user-photo" src="images/avatar.jpg" alt="">
+						<div class="user-name">Samuel Green</div>
+						<div class="about">Available to Walk</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="grid-area">
-		<div class="content">
-			<div class="content-title">
-				Simple booking
-			</div>
-			<div class="content-text">
-				Stay in touch with our dog walkers through the chat interface. This makes it easy to
-				discuss arrangements and make bookings. Once the walk has been completed you can rate
-				your walker and book again all through the chat.
+		<div class="grid-area">
+			<div class="content">
+				<div class="content-title">
+					Simple booking
+				</div>
+				<div class="content-text">
+					Stay in touch with our dog walkers through the chat interface. This makes it easy to
+					discuss arrangements and make bookings. Once the walk has been completed you can rate
+					your walker and book again all through the chat.
+				</div>
 			</div>
 		</div>
-	</div>
+	</main>
 </body>
 
 </html>
