style:add mobile content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
 						<div class="about">Available to Walk</div>
 					</div>
 				</div>
+				<div class="mobile-content">
+					<div class="chat-box1">
+						That sounds great. I’d be happy with that.
+					</div>
+					<div class="chat-box2">Could you send over some pictures of your dog, please?
+					</div>
+					<div class="dogs-imgs">
+						<img src="images/dog-image-1.jpg" alt="">
+						<img src="images/dog-image-2.jpg" alt="">
+						<img src="images/dog-image-3.jpg" alt="">
+					</div>
+					<div class="chat-box3">Here are a few pictures. She’s a happy girl!</div>
+					<div class="chat-box4"> Can you make it?</div>
+					<div class="chat-box5">She looks so happy! The time we discussed works. How long shall I take her
+						out for?</div>
+					<div class="offer-1">30 minute walk
+						<span class="price-1">$29</span>
+					</div>
+					<div class="offer-2">1 hour walk
+						<span class="price-2">$49</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="grid-area">
