style:adjust mobile content

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 						<div class="about">Available to Walk</div>
 					</div>
 				</div>
-				<div class="mobile-content">
+				<div class="mobile-content2">
 					<div class="chat-box1">
 						That sounds great. I’d be happy with that.
 					</div>
 					<div class="chat-box2">Could you send over some pictures of your dog, please?
 					</div>
-					<div class="dogs-imgs">
-						<img src="images/dog-image-1.jpg" alt="">
-						<img src="images/dog-image-2.jpg" alt="">
-						<img src="images/dog-image-3.jpg" alt="">
+					<div class="mobile-dogs-imgs">
+						<img class="dogs-imgs" src="images/dog-image-1.jpg" alt="">
+						<img class="dogs-imgs" src="images/dog-image-2.jpg" alt="">
+						<img class="dogs-imgs" src="images/dog-image-3.jpg" alt="">
 					</div>
 					<div class="chat-box3">Here are a few pictures. She’s a happy girl!</div>
 					<div class="chat-box4"> Can you make it?</div>
