--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
 					<div class="chat-box4"> Can you make it?</div>
 					<div class="chat-box5">She looks so happy! The time we discussed works. How long shall I take her
 						out for?</div>
-					<div class="offer-1">30 minute walk
+					<div class="offer-1"><span class="time-1">30 minute walk</span>
 						<span class="price-1">$29</span>
 					</div>
-					<div class="offer-2">1 hour walk
+					<div class="offer-2"><span class="time-2">1 hour walk</span>
 						<span class="price-2">$49</span>
+
+					</div>
+					<div class="text-box">
+						<input class="input-text" type="text">
+						<label></label>
 					</div>
 				</div>
 			</div>
