style:add media queries

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
 					</div>
 					<div class="text-box">
-						<input class="input-text" type="text">
+						<input class="input-text" type="text" placeholder="Type a message...">
 						<label></label>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="grid-area">
+		<div class="flex-area2">
 			<div class="content">
 				<div class="content-title">
 					Simple booking
