style;add mobile adds

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 						<img class="user-photo" src="images/avatar.jpg" alt="">
 						<div class="user-name">Samuel Green</div>
 						<div class="about">Available to Walk</div>
+						<div class="arrow"></div>
+						<div class="dot1"></div>
+						<div class="dot2"></div>
+						<div class="dot3"></div>
+
 					</div>
 				</div>
 				<div class="mobile-content2">
@@ -47,6 +52,9 @@
 					<div class="text-box">
 						<input class="input-text" type="text" placeholder="Type a message...">
 						<label></label>
+						<div class="arrow2-background">
+							<div class="arrow2"></div>
+						</div>
 					</div>
 				</div>
 			</div>
